--- a/homepageofcutomer.html
+++ b/homepageofcutomer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>The Delight Spot (Bar & Restro)</title>
+    <title>The Delight Spot (Bar & Restro) customer home page</title>
    
 
     <link rel="shortcut icon" href="d.png">
@@ -52,11 +52,11 @@
           <div class="navigation-bar">
               <ul>
                   <li class="active"><a href="index.html">Home<span class="underline"></span></a></li>
-                  <li><a href="Listofreservation.html">Reservations<span class="underline"></span></a></li>
-                  <li><a href="index1.html">Your Menu<span class="underline"></span></a></li>
-                  <li><a href="portfolio.html">Portfolio<span class="underline"></span></a></li>
-                  <li><a href="Foodrequest.html">Food Requests<span class="underline"></span></a></li>
-                  <li><a href="#">Check Reviews<span class="underline"></span></a></li>
+                  <li><a href="ReserveTable.html">Reserve Table<span class="underline"></span></a></li>
+                  <li><a href="OrderFoodOnline.html">Order Food<span class="underline"></span></a></li>
+                  <li><a href="Portfolio1.html">About Restro<span class="underline"></span></a></li>
+                  <li><a href="#">Account<span class="underline"></span></a></li>
+                  <li><a href="#">Give Reviews<span class="underline"></span></a></li>
                   <li><a href="detailsofrestro.html">Add/Update Details<span class="underline"></span></a></li>
               </ul>
           </div>
@@ -84,7 +84,7 @@
           <h3>Our Story</h3>
           <div><i class="fas fa-asterisk"></i></div>
           <p>The Delight Spot  is a restaurant, bar and coffee roastery located on a busy corner site in Sharma Market. With glazed frontage on two sides of the building, overlooking the market and a bustling Ranchi intersection.</p>
-          <div><a class="a-CTA" href="portfolio.html">About Yourself</a></div>
+          <div><a class="a-CTA" href="portfolio1.html">About Restro</a></div>
       </div>
       <div class="image-container">
           <div class="image image1">
